# RelModPy

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  units.py
relmodpy/: __init__.py  eos.py  mode.py  perturbations_exterior.py  perturbations_interior.py  star.py
scripts/: example.py  units.py
src/relmodpy/: __init__.py  eos.py  mode.py  muller.py  perturbations_exterior.py  perturbations_interior.py  star.py
tests/: test_eos.py  test_mode.py  test_star.py
